force-app/main/default/objects/copado__Test__c/fields/copado__Category__c.field-meta.xml
<CustomField>
    <fullName>copado__Category__c</fullName>
    <label>Test Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>