force-app/main/default/objects/copado__Test__c/fields/copado__ExtensionConfiguration__c.field-meta.xml
<CustomField>
    <fullName>copado__ExtensionConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The displayed values are based on the active Extension Configuration records available in your org.</inlineHelpText>
    <label>Tool</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__ExtensionConfiguration__c.copado__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>ChildTests</relationshipName>
    <type>Lookup</type>
</CustomField>