force-app/main/default/objects/copado__Test__c/fields/copado__Integration__c.field-meta.xml
<CustomField>
    <fullName>copado__Integration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Deprecated</inlineHelpText>
    <label>Tool - Deprecated</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__ExtensionConfiguration__c.copado__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>copado__ExtensionConfiguration__c</referenceTo>
    <relationshipLabel>Tests - Deprecated</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>