force-app/main/default/objects/copado__Test__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>copado__Reference__c</columns>
    <columns>NAME</columns>
    <columns>copado__Category__c</columns>
    <columns>copado__Tool__c</columns>
    <columns>copado__User_Story__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>